--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "framer-motion": "^10.16.5",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
